# goodmalloc

./: .clang-format  CMakeLists.txt  README.md
benchmark/: benchmark.cpp
include/: goodmalloc.h  shared.hpp
modules/: central_cache.cppm  page_cache.cppm  thread_cache.cppm  utils.cppm
src/: goodmalloc.cpp
tests/: test_allocator_api.cpp  test_page_cache.cpp  test_radix_tree.cpp
